--- a/src/functionality/ShoppingCart.css
+++ b/src/functionality/ShoppingCart.css
@@ -1,10 +1,15 @@
 .shopping-cart {
   display: flex;
   flex-direction: row;
-  background-color: brown;
   margin-bottom: 1rem;
+  width: 20rem;
 }
 
 .cart-price {
   margin-left: 2rem;
+}
+
+.delete-btn {
+  margin-top: 0.6rem;
+  margin-left: 3rem;
 }
